--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "engines": {
     "node": "20.12.2"
@@ -27,6 +27,7 @@
     "nanoid": "^5.0.7",
     "nodemailer": "^6.9.14",
     "pdfkit": "^0.15.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "stripe": "^16.7.0"
   }
 }
